--- a/templates/rating.html
+++ b/templates/rating.html
@@ -19,7 +19,7 @@
 
     <header class="header">
         {% if back %}
-            <div class="chevron"><a style="text-decoration: none;" href="{% url back %}"><i
+            <div class="chevron"><a style="text-decoration: none;" href="{% url back 1 %}"><i
                     class="fas fa-chevron-left"></i></a></div>
         {% endif %}
         <img class="img__header" src="https://i.ibb.co/2FmWy1Y/logo.png" alt="">
